--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -24,7 +24,7 @@
 							<a class="nav-link" href="/"><span class="navBarItem">Home</span></a>
 						</li>
             <li class="nav-item active">
-							<a class="nav-link" href="#"><span class="navBarItem">Create Entry</span></a>
+							<a class="nav-link" href="/CreateEntry"><span class="navBarItem">Create Entry</span></a>
             </li>
             <li class="nav-item active">
 							<a class="nav-link" href="About"><span class="navBarItem">About</span></a>
