--- a/views/createEntry.ejs
+++ b/views/createEntry.ejs
@@ -1,2 +1,12 @@
 <%- include("partials/header.ejs") %>
+
+<form class="center">
+	<div class="form-group">
+		<div class="form-group">
+			<label for="title">Title: </label>
+			<input type="text" class="form-control titleField center" id="title">
+		</div>
+	</div>
+</form>
+
 <%- include("partials/footer.ejs") %>
