--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -1,3 +1,8 @@
+body {
+	position: relative;
+	height: 100%;
+}
+
 .centerImg {
 	display: block;
 	margin: auto;
@@ -37,23 +42,28 @@
 	width: 20%;
 }
 
-.footer {
-	position: absolute;
-	bottom: 0;
-	width: 100%;
-	text-align: center;
-	height: 60px;
-	background-color: #f2f2f2;
+.centerFlex {
+	display: flex;
+	justify-content: center;
 }
 
-.footer-padding {
-	padding-bottom: 60px;
+.flexFormat {
+	width: 75%;
+	flex-wrap: wrap;
+	justify-content: center;
 }
 
-.footer p {
+.cardMargin {
+	margin: 10px;	
+}
+
+.content {
+	width: 50%;
+	margin: auto;
+}
+
+.publish {
 	margin-top: 25px;
-	font-size: 12px;
-	color: black;
 }
 
 @media only screen and (max-width: 800px) {
