--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,5 +1,5 @@
 <footer class="footer footer-padding">
-	<p >Hello All this is the footer</p>
+	<p >Created with care for stickbugs everwhere.</p>
 </footer>
 </body>
 </html>
