--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -1,6 +1,10 @@
+html {
+    position: relative;
+    min-height: 100%;
+}
+
 body {
-	position: relative;
-	height: 100%;
+    margin: 0 0 150px;
 }
 
 .centerImg {
@@ -66,6 +70,53 @@ body {
 	margin-top: 25px;
 }
 
+.post-title {
+	margin-bottom: 2.5%;;
+}
+
+.post-content {
+	width: 50%;
+	height: auto;
+	margin: auto;
+}
+
+.aboutFlex {
+	margin: auto auto 1.5rem;
+}
+
+.socialIcons {
+	width: 50px;
+	height: auto;
+}
+
+.vertical-center {
+	margin: 0;
+	position: relative;
+	top: 25%;
+	-ms-transform: translateY(-50%);
+	transform: translateY(-50%);
+  }
+
+.person {
+	font-size: 20px;
+	font-weight: 600;
+	margin-right: 30px;
+}
+
+footer {
+    background: #f2f2f2;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 60px;
+}
+
+footer p {
+	padding-top: 20px;
+	text-align: center;
+}
+
 @media only screen and (max-width: 800px) {
 	.navbar {
 		width: 100%;
@@ -73,5 +124,24 @@ body {
 
 	.horizRule {
 		width: 100%;
+	}
+
+	.post-title {
+		margin-bottom: 5%;
+	}
+
+	.person {
+		font-size: 30px;
+		font-weight: 600;
+	}
+
+	.socialIcons {
+		width: 75px;
+		height: auto;
+	}
+
+	.vertical-center {
+		top: 0%;
+		margin: auto;
 	}
 }
